fix Note icon alignment in sidebar, fixes #9018

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -495,6 +495,7 @@ button.disabled .icon.operation use,
 
 .icon-annotation {
     color: #333;
+    vertical-align: baseline;
 }
 
 
